Fix letter-spacing in description font

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -508,7 +508,6 @@ html[data-theme='dark'] .rlc-description {
   font-size: 64px;
   margin-bottom: 0.25rem;
   margin-top: 3rem;
-  letter-spacing: -0.04em;
   font-family: greycliff-cf, sans-serif;
   line-height: 64px;
   font-weight: 800;
